# linux-webcam-stream

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  Makefile  README.rst  cameraCapture.c  streamMuxer.c  streamMuxer.h
ops/: bootstrap.sh
